Removed JSSC connection driver and added an event to detect if a controller has been disconnected.