@@ -24,7 +24,6 @@ import org.apache.commons.lang3.StringUtils;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Serial connection using JSerialComm
@@ -34,6 +33,14 @@ import java.util.stream.Collectors;
 public class JSerialCommConnection extends AbstractConnection implements SerialPortDataListener {
 
     private SerialPort serialPort;
+
+    public JSerialCommConnection() {
+        // Empty implementation
+    }
+
+    public JSerialCommConnection(SerialPort serialPort) {
+        this.serialPort = serialPort;
+    }
 
     @Override
     public void setUri(String uri) {
@@ -77,6 +84,7 @@ public class JSerialCommConnection extends AbstractConnection implements SerialP
         if (serialPort != null) {
             serialPort.removeDataListener();
             serialPort.closePort();
+            serialPort = null;
         }
     }
 
@@ -92,36 +100,39 @@ public class JSerialCommConnection extends AbstractConnection implements SerialP
 
     @Override
     public boolean isOpen() {
-        return serialPort.isOpen();
+        return serialPort != null && serialPort.isOpen();
     }
 
     @Override
-    public List<String> getPortNames() {
-        return Arrays.stream(SerialPort.getCommPorts())
-                .map(SerialPort::getSystemPortName)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<IConnectionDevice> getDevices() {
+    public List<? extends IConnectionDevice> getDevices() {
         return Arrays.stream(SerialPort.getCommPorts())
                 .map(JSerialCommConnectionDevice::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public int getListeningEvents() {
-        return SerialPort.LISTENING_EVENT_DATA_AVAILABLE;
+        return SerialPort.LISTENING_EVENT_DATA_AVAILABLE | SerialPort.LISTENING_EVENT_PORT_DISCONNECTED;
     }
 
     @Override
     public void serialEvent(com.fazecast.jSerialComm.SerialPortEvent event) {
-        if (event.getEventType() != SerialPort.LISTENING_EVENT_DATA_AVAILABLE) {
-            return;
+        switch (event.getEventType()) {
+            case SerialPort.LISTENING_EVENT_PORT_DISCONNECTED -> {
+                try {
+                    connectionListenerManager.onConnectionClosed();
+                } catch (Exception e) {
+                    // Never mind
+                }
+            }
+            case SerialPort.LISTENING_EVENT_DATA_AVAILABLE -> {
+                byte[] newData = new byte[serialPort.bytesAvailable()];
+                int numRead = serialPort.readBytes(newData, newData.length);
+                getConnectionListenerManager().handleResponse(newData, 0, numRead);
+            }
+            default -> {
+                // Never mind
+            }
         }
-
-        byte[] newData = new byte[serialPort.bytesAvailable()];
-        int numRead = serialPort.readBytes(newData, newData.length);
-        getResponseMessageHandler().handleResponse(newData, 0, numRead);
     }
 }
